test/simple/correct/PatNegateFloat.hs
module PatNegateFloat where

main :: Int
main = case -.3.3 of
    -.3.3 -> 42
    _  -> -1
