test/simple/typeerrors/Heuristics/AppReorder1.hs
module AppReorder1 where

main :: [Int]
main = map [1 .. 10] fac

fac :: Int -> Int
fac = undefined
